# FollowMeCooler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ble/: CMakeLists.txt  ble.cpp
gps/: CMakeLists.txt  gps.cpp
scanner/: CMakeLists.txt  monitor.py  scanner_test.c  scanner_test.cpp
src/: CMakeLists.txt
src/ble/: ble.cpp  ble.hpp
src/gps/: CMakeLists.txt
src/magnetometer/: CMakeLists.txt  calibration.cpp  magnetometer.cpp
src/main/: CMakeLists.txt  core0.cpp  core1.hpp  navigation.hpp  pinout.hpp
src/scanner/: CMakeLists.txt  alignment.cpp  monitor.py  scanner.hpp  scanner_test.cpp
